crates/panache-parser/tests/snapshots/yaml__yaml_suite_3HFZ.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 3HFZ
input: "---\nkey: value\n... invalid\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_TRAILING_CONTENT_AFTER_DOCUMENT_END:trailing content after document end marker@15..26]
