crates/panache-parser/tests/snapshots/yaml__yaml_suite_3MYT.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 3MYT
input: "---\nk:#foo\n &a !t s\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
