crates/panache-parser/tests/snapshots/yaml__yaml_suite_3R3P.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 279
expression: snapshot
---
case_id: 3R3P
input: "&sequence\n- a\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
