crates/panache-parser/tests/snapshots/yaml__yaml_suite_3UYS.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 3UYS
input: "escaped slash: \"a\\/b\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
