crates/panache-parser/tests/snapshots/yaml__yaml_suite_4ABK.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4ABK
input: "{\nunquoted : \"separate\",\nhttp://foo.com,\nomitted value:,\n}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
