crates/panache-parser/tests/snapshots/yaml__yaml_suite_4CQQ.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4CQQ
input: "plain:\n  This unquoted scalar\n  spans many lines.\n\nquoted: \"So does this\n  quoted scalar.\\n\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
