crates/panache-parser/tests/snapshots/yaml__yaml_suite_4EJS.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4EJS
input: "---\na:\n\tb:\n\t\tc: value\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_ERROR:invalid plain mapping line@4..6]
