crates/panache-parser/tests/snapshots/yaml__yaml_suite_4GC6.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4GC6
input: "'here''s to \"quotes\"'\n"
has_error_contract: false
parsed_mapping_tree: true
