crates/panache-parser/tests/snapshots/yaml__yaml_suite_4H7K.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4H7K
input: "---\n[ a, b, c ] ]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_TRAILING_CONTENT_AFTER_FLOW_END:trailing content after flow sequence end@15..16]
