crates/panache-parser/tests/snapshots/yaml__yaml_suite_4HVU.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4HVU
input: "key:\n   - ok\n   - also ok\n  - wrong\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_ERROR:invalid plain mapping line@0..4]
