crates/panache-parser/tests/snapshots/yaml__yaml_suite_4JVG.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4JVG
input: "top1: &node1\n  &k1 key1: val1\ntop2: &node2\n  &v2 val2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:invalid token while parsing block map key@45..53]
